Fix parapgraph overlappings

--- a/src/style.sass
+++ b/src/style.sass
@@ -55,8 +55,11 @@ select.modifier
   padding: 0
 
 p.modified-text
+  max-height: 20vh
   display: block
-  overflow: hidden
+
+  overflow-x: hidden
+  overflow-y: scroll
 
   padding: 0.5vw
 
